# revix

./: .gitignore  CARD_REFACTORING_SUMMARY.md  README.md  firebase.json  pubspec.yaml
.github/workflows/: build.yml  deploy-marketing.yml
Marketing-Site/: index.html  manifest.json  robots.txt  script.js  sitemap.xml  style.css
android/: build.gradle  settings.gradle
android/app/: build.gradle
assets/: animation.json  revix.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: AddEntryForm.dart  AddLectureForm.dart  AddRecords.dart  CodeBar.dart  CustomFrequencySelector.dart  CustomThemeGenerator.dart  DashboardItem.dart  DetailsPage.dart  FetchRecords.dart  HomePage.dart  LectureBar.dart  LoginPage.dart  ProfilePage.dart  RecordTable.dart  SchedulePage.dart  ScheduleTable.dart  SignupPage.dart  SplashScreen.dart  SubjectsBar.dart  ThemeNotifier.dart  TodayPage.dart  UpdateRecords.dart  main.dart  theme_data.dart
lib/AI/: ApiKeyManager.dart  ChatHistoryPage.dart  ChatMessage.dart  ChatPage.dart  ChatStorage.dart  ModelSelectionManager.dart  gemini_service.dart  schedule_data_provider.dart
lib/DetailsPage/: AnimatedCard.dart  AnimatedCardDetailP.dart  CategoriesBar.dart  CodeBar.dart  DetailRow.dart  DetailsPage.dart  EntryBar.dart  FilterButton.dart  LectureBar.dart  NavigationSidebar.dart  (+8 more)
linux/: CMakeLists.txt  my_application.cc
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+269 files in other folders)
