[package]
name = "revix"
version = "1.2.8"
description = "A powerful task scheduling and productivity app with AI-powered assistance, built with Flutter and Firebase"
authors = ["imnexerio"]
license = "AGPL-3.0"
repository = "https://github.com/imnexerio/revix"
homepage = "https://github.com/imnexerio/revix"
readme = "../README.md"
keywords = ["productivity", "task-management", "flutter", "tauri"]
categories = ["gui"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
